--- a/index.html
+++ b/index.html
@@ -5,12 +5,87 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <script src="https://kit.fontawesome.com/87b7f316c9.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <script src="app/script.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" type="text/css" />
-  <title>Document</title>
+  <title>Regular Expressions</title>
 </head>
 <body>
-  
+  <nav class="navbar navbar-inverse">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Cedric Mills</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Development</a></li>
+          <li><a href="#">3D Modeling</a></li>
+          <li><a href="#">Graphics</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-lg-9">
+        <article>Article 1</article>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <article>Article 2</article>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <article>Article 3</article>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-lg-3">
+        The Sidebar
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-lg-9">
+        <article>
+          <h3><a href="#">Regex Creation</a></h3>
+          <p>Regular Expression, also called regex, regexp, is a sequence of characters for defining a search pattern in string data. It is an independent language specialized in its niche use case and became popular in 1968 for pattern matching in a text editor.</p>
+        </article>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <article>
+              <h3><a href="#">Regex Creation</a></h3>
+              <p>There are two ways you can create a regex in JavaScript, with a RegExp constructor, or as a literal value. Note, like everything else, regex is also an object in JavaScript. When using a regex literal, you must enclose the pattern between two forward slashed /.</p>
+            </article>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <article>
+              <h3><a href="#">Special Characters</a></h3>
+              <p>The true power of Regular Expression is in its special characters. You can write regex patterns using a combination of simple and special characters. As an example, the regex /ab*c/ means an 'a' followed by zero or more 'b' (* means zero or more occurrences of the previous item) and then a 'c'. It will match a selection of different strings.</p>
+            </article>
+          </div>
+
+          <div class="col-xs-12 col-lg-3">
+            <h3>Special Characters</h3>
+            <ul class="list-unstyled">
+              <li><a href="#"><h5>The Backward Slash</h5></a></li>
+              <li><a href="#"><h5>The Caret</h5></a></li>
+              <li><a href="#"><h5>The Dollar Sign</h5></a></li>
+              <li><a href="#"><h5>The Plus Sign</h5></a></li>
+              <li><a href="#"><h5>The Period</h5></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
